--- a/launcher/ui.ui
+++ b/launcher/ui.ui
@@ -6,25 +6,36 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1066</width>
-    <height>821</height>
+    <width>703</width>
+    <height>465</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Launcher</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 190, 144);</string>
+   <string notr="true">background-color: rgb(172, 216, 230);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>700</y>
-      <width>101</width>
+      <x>420</x>
+      <y>280</y>
+      <width>181</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">:!hover{
+background-color: rgb(172, 216, 230);
+}
+
+:hover{
+	border: 4px solid black; 
+    background: rgb(105, 185, 211); 
+    padding: 10px;
+}</string>
     </property>
     <property name="text">
      <string>Открыть сайт</string>
@@ -33,34 +44,32 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>700</y>
+      <x>510</x>
+      <y>360</y>
       <width>181</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">backgr:!hover{
+background-color: rgb(172, 216, 230);
+}
+
+:hover{
+	border: 4px solid black; 
+    background: rgb(105, 185, 211); 
+    padding: 10px;
+}ound-color: rgb(172, 216, 230);</string>
     </property>
     <property name="text">
      <string>Запустить игру!</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>700</y>
-      <width>121</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Закрыть программу</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>50</y>
+      <x>80</x>
+      <y>0</y>
       <width>721</width>
       <height>41</height>
      </rect>
@@ -76,32 +85,12 @@
      <string>Эта программа обновит клиент игры до последней версии.</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>100</y>
-      <width>721</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Viner Hand ITC</family>
-      <pointsize>14</pointsize>
-      <underline>true</underline>
-     </font>
-    </property>
-    <property name="text">
-     <string>Проверьте интернет соединение!!!</string>
-    </property>
-   </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>590</y>
-      <width>391</width>
+      <y>240</y>
+      <width>301</width>
       <height>181</height>
      </rect>
     </property>
@@ -113,11 +102,22 @@ OK</string>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>700</y>
+      <x>320</x>
+      <y>360</y>
       <width>181</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">:!hover{
+background-color: rgb(172, 216, 230);
+}
+
+:hover{
+	border: 4px solid black; 
+    background: rgb(105, 185, 211); 
+    padding: 10px;
+}</string>
     </property>
     <property name="text">
      <string>Запустить мультиплеер!</string>
@@ -126,9 +126,9 @@ OK</string>
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>42</x>
-      <y>360</y>
-      <width>241</width>
+      <x>12</x>
+      <y>90</y>
+      <width>271</width>
       <height>31</height>
      </rect>
     </property>
@@ -137,16 +137,19 @@ OK</string>
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="text">
+     <string/>
+    </property>
     <property name="placeholderText">
-     <string>Адрес почты</string>
+     <string>Email</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>400</y>
-      <width>241</width>
+      <x>10</x>
+      <y>130</y>
+      <width>271</width>
       <height>31</height>
      </rect>
     </property>
@@ -162,11 +165,22 @@ OK</string>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>460</y>
-      <width>241</width>
+      <x>10</x>
+      <y>180</y>
+      <width>271</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">:!hover{
+background-color: rgb(172, 216, 230);
+}
+
+:hover{
+	border: 4px solid black; 
+    background: rgb(105, 185, 211); 
+    padding: 10px;
+}</string>
     </property>
     <property name="text">
      <string>Войти</string>
@@ -175,9 +189,9 @@ OK</string>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>330</y>
-      <width>251</width>
+      <x>10</x>
+      <y>60</y>
+      <width>281</width>
       <height>21</height>
      </rect>
     </property>
@@ -193,9 +207,9 @@ OK</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>340</y>
-      <width>671</width>
+      <x>300</x>
+      <y>70</y>
+      <width>391</width>
       <height>111</height>
      </rect>
     </property>
@@ -203,6 +217,9 @@ OK</string>
      <font>
       <pointsize>12</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(172, 216, 230);</string>
     </property>
     <property name="text">
      <string>Все системы функционируют нормально.</string>
@@ -214,7 +231,7 @@ OK</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1066</width>
+     <width>703</width>
      <height>21</height>
     </rect>
    </property>
