--- a/installer/ui.ui
+++ b/installer/ui.ui
@@ -6,25 +6,36 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1066</width>
-    <height>821</height>
+    <width>723</width>
+    <height>437</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Installer</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 190, 144);</string>
+   <string notr="true">background-color: rgb(172, 216, 230);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>700</y>
-      <width>171</width>
+      <x>350</x>
+      <y>330</y>
+      <width>311</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">backgr:!hover{
+background-color: rgb(172, 216, 230);
+}
+
+:hover{
+	border: 4px solid black; 
+    background: rgb(105, 185, 211); 
+    padding: 10px;
+}ound-color: rgb(172, 216, 230);</string>
     </property>
     <property name="text">
      <string>Установить</string>
@@ -33,9 +44,9 @@
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>230</y>
-      <width>991</width>
+      <x>10</x>
+      <y>160</y>
+      <width>691</width>
       <height>31</height>
      </rect>
     </property>
@@ -43,44 +54,12 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>270</y>
-      <width>891</width>
-      <height>241</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Viner Hand ITC</family>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Спасибо за установку нашей игры! Вы можете открыть ее через ярлык на рабочем столе</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_4">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>700</y>
-      <width>181</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Закрыть программу</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>50</y>
-      <width>981</width>
+      <y>20</y>
+      <width>371</width>
       <height>41</height>
      </rect>
     </property>
@@ -91,6 +70,9 @@
       <italic>false</italic>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(172, 216, 230);</string>
+    </property>
     <property name="text">
      <string>Вы открыли установщик игры COVIDcover.</string>
     </property>
@@ -98,9 +80,9 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>120</y>
-      <width>991</width>
+      <x>260</x>
+      <y>80</y>
+      <width>471</width>
       <height>31</height>
      </rect>
     </property>
@@ -111,18 +93,24 @@
       <underline>true</underline>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(172, 216, 230);</string>
+    </property>
     <property name="text">
-     <string>Проерьте интернет соединение перед началом!!!</string>
+     <string>Проверьте интернет соединение перед началом!!!</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>580</y>
+      <y>220</y>
       <width>331</width>
-      <height>181</height>
+      <height>171</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(172, 216, 230);</string>
     </property>
     <property name="plainText">
      <string>Error logs:
@@ -133,14 +121,41 @@ OK
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>700</y>
-      <width>181</width>
+      <x>350</x>
+      <y>250</y>
+      <width>311</width>
       <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">backgr:!hover{
+background-color: rgb(172, 216, 230);
+}
+
+:hover{
+	border: 4px solid black; 
+    background: rgb(105, 185, 211); 
+    padding: 10px;
+}ound-color: rgb(172, 216, 230);</string>
+    </property>
     <property name="text">
      <string>Открыть сайт</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>210</y>
+      <width>371</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(172, 216, 230);</string>
+    </property>
+    <property name="text">
+     <string>Все системы функционируют нормально</string>
     </property>
    </widget>
   </widget>
@@ -149,7 +164,7 @@ OK
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1066</width>
+     <width>723</width>
      <height>21</height>
     </rect>
    </property>
