--- a/website/templates/ad_edit_servers.html
+++ b/website/templates/ad_edit_servers.html
@@ -5,7 +5,7 @@
     {{ form.hidden_tag() }}
     <p>
         {{ form.ip.label }}<br>
-        {{ form.ip(class="form-control") }}<br>
+        {{ form.ip(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.ip.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -14,7 +14,7 @@
     </p>
     <p>
         {{ form.limit.label }}<br>
-        {{ form.limit(class="form-control") }}<br>
+        {{ form.limit(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.limit.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -23,25 +23,16 @@
     </p>
     <p>
         {{ form.players.label }}<br>
-        {{ form.players(class="form-control") }}<br>
+        {{ form.players(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.players.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
     </p>
-    <p>
-        {{ form.players_n.label }}<br>
-        {{ form.players_n(class="form-control") }}<br>
-        {% for error in form.players_n.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-        <p>
+    <p> {{ form.regen}}{{ form.regen.label }}
         {{ form.token.label }}<br>
-        {{ form.token(class="form-control") }}<br>
+        {{ form.token(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.token.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -50,7 +41,7 @@
     </p>
         <p>
         {{ form.orders.label }}<br>
-        {{ form.orders(class="form-control") }}<br>
+        {{ form.orders(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.orders.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -59,14 +50,13 @@
     </p>
         <p>
         {{ form.roles.label }}<br>
-        {{ form.roles(class="form-control") }}<br>
+        {{ form.roles(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.roles.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
     </p>
-    <p>{{ form.running }}{{ form.running.label }}</p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 </form>
 {% endblock %}
