--- a/website/templates/ad_edit_users.html
+++ b/website/templates/ad_edit_users.html
@@ -5,7 +5,7 @@
     {{ form.hidden_tag() }}
     <p>
         {{ form.email.label }}<br>
-        {{ form.email(class="form-control", type="email") }}<br>
+        {{ form.email(class="form-control", type="email", placeholder="без изменений") }}<br>
         {% for error in form.email.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -14,7 +14,7 @@
     </p>
     <p>
         {{ form.username.label }}<br>
-        {{ form.username(class="form-control") }}<br>
+        {{ form.username(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.username.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -23,16 +23,16 @@
     </p>
     <p>
         {{ form.password.label }}<br>
-        {{ form.password(class="form-control") }}<br>
+        {{ form.password(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.password.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
     </p>
-    <p>
+    <p> {{ form.regen}}{{ form.regen.label }}
         {{ form.token.label }}<br>
-        {{ form.token(class="form-control") }}<br>
+        {{ form.token(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.token.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -41,7 +41,7 @@
     </p>
     <p>
         {{ form.privilege.label }}<br>
-        {{ form.privilege(class="custom-select") }}<br>
+        {{ form.privilege(class="custom-select", placeholder="без изменений") }}<br>
         {% for error in form.privilege.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -50,7 +50,7 @@
     </p>
     <p>
         {{ form.score.label }}<br>
-        {{ form.score(class="form-control") }}<br>
+        {{ form.score(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.score.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
@@ -59,7 +59,7 @@
     </p>
     <p>
         {{ form.role.label }}<br>
-        {{ form.role(class="form-control") }}<br>
+        {{ form.role(class="form-control", placeholder="без изменений") }}<br>
         {% for error in form.role.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
