server ip fixed new builds CHANGE HASH IN MAIN FLASK SERVER

--- a/website/templates/rules.html
+++ b/website/templates/rules.html
@@ -1,7 +1,16 @@
 {% extends 'base.html' %}
 {% block body %}
    <div class="jumbotron bg-info">
-        <h1 class="display-4">Правила мультиплеера</h1>
+        <h1 class="display-4">Общие правила</h1>
+<p class='lead'>A - движение налево<br>
+    D - движение направо<br>
+    Пробел - прыжок<br>
+    Tab - инвентарь<br>
+    Esc - пауза<br>
+    С - сканер (для полицейских)<br>
+    3 - задержание (для полицейских)<br>
+</p>
+<h1 class="display-4">Правила мультиплеера</h1>
 <p class='lead'>При подключении игрок получает одну из 3 ролей (модель поведения, которой он будет придерживаться во время игры). Вот
     краткие цели для каждой группы персонажей:</p>
 <ol>
@@ -20,7 +29,7 @@
     жителей, находящихся поблизости. Зеленая метка означает, что тестирование показало отрицательный результат. Красная
     – положительный результат, предписана самоизоляция. Серый – житель не прошел тестирование. Сканер может работать
     ограниченное время, перезарядка также занимает некоторое время. При обнаружении нарушителя полицейский может
-    задержать его, для этого необходимо 3 раза нажать кнопку задержания при касании нарушителя. Это можно сделать один
+    задержать его, для этого необходимо 2 секунды удерживать кнопку задержания при касании нарушителя. Это можно сделать один
     раз в 5 секунд.
 </p></li>
 <li><p class="lead">
@@ -34,3 +43,4 @@
     </div>
 
     {% endblock %}
+
