builds done not tested almost ready for server deploy

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,10 +24,10 @@
         <a class="nav-link" href="/rules" role="button">Правила</a>
       </li>
         <li class="nav-item active">
-        <a class="nav-link" href="/static/installer.exe" role="button">Скачать для Windows</a>
+        <a class="nav-link" href="/static/releases/setup.zip" role="button">Скачать для Windows</a>
       </li>
         <li class="nav-item active">
-        <a class="nav-link" href="/static/installer.exe" role="button">Скачать для Linux и macOS</a>
+        <a class="nav-link" href="/static/releases/unix_setup.zip" role="button">Скачать для Linux и macOS</a>
       </li>
 
             {% if current_user.is_authenticated %}
